# Basic-Graphics

./: CMakeLists.txt  JUSTIFICATION.md  README.md
lib/: CMakeLists.txt
res/shaders/: frag.glsl  vert.glsl
src/: main.cpp
